--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "fontfaceobserver": "2.1.0",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
+    "i18next": "^19.0.1",
     "immer": "3.0.0",
     "intl": "1.2.5",
     "invariant": "2.2.4",
@@ -83,6 +84,7 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-helmet": "6.0.0-beta",
+    "react-i18next": "^11.2.3",
     "react-intl": "2.8.0",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
