--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
+    "bootstrap": "^4.4.1",
     "chalk": "^2.4.2",
     "compression": "1.7.4",
     "connected-react-router": "6.4.0",
@@ -87,7 +88,7 @@
     "react-i18next": "^11.2.3",
     "react-intl": "2.8.0",
     "react-redux": "7.0.2",
-    "react-router-dom": "5.0.0",
+    "react-router-dom": "^5.0.0",
     "redux": "4.0.1",
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
