--- a/package.json
+++ b/package.json
@@ -90,12 +90,14 @@
     "react-intl": "2.8.0",
     "react-redux": "7.0.2",
     "react-router-dom": "^5.0.0",
+    "react-select": "^3.0.8",
     "redux": "4.0.1",
     "redux-actions": "^2.6.5",
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
-    "styled-components": "4.2.0"
+    "styled-components": "4.2.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@babel/cli": "7.4.3",
