--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-facebook-login": "^4.1.1",
     "react-helmet": "6.0.0-beta",
     "react-i18next": "^11.2.3",
     "react-intl": "2.8.0",
